# general_python

./: .gitignore  .readthedocs.yaml  DOCUMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  __common__.py  __init__.py  benchmark.py  benchmark_quadratic.py  benchmark_spectral.py  benchmark_spectral_broadcast.py  benchmark_spectral_multi.py  benchmark_spectral_multi_bubble.py  benchmark_spectral_sparse.py  benchmark_spectral_sparse_opt.py  benchmark_spectral_sparse_opt2.py  benchmark_thermal.py  benchmark_thermal_optimized.py  fix_flake.py  pyproject.toml  reproduce_issue.py  test_documentation.py  update_sf_pr.py
.jules/: bolt.md
algebra/: BACKEND_INTEGRATION.md  PRECONDITIONERS.md  README.md  __init__.py  __utils__.py  backend_linalg.py  linalg.py  linalg_sparse.py  ode.py  preconditioners.py  ran_matrices.py  ran_wrapper.py  solver.py  spectral_backend.py  test_preconditioners.py  test_tdvp_nqs_compat.py  utils.py
algebra/eigen/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  arnoldi.py  block_lanczos.py  exact.py  factory.py  lanczos.py  result.py
algebra/examples/: README.md  example_cg_basic.py  example_direct.py  example_eigensolvers.py  example_gram_form.py  example_lanczos.py  example_matvec_form.py  example_minres_scipy.py  example_minres_scipy.py-e  example_solver_factory.py  example_with_preconditioners.py
algebra/info/: README.md  backend.md  eigen.md
algebra/solvers/: README.md  __cg__.py  __direct__.py  __init__.py  __pseudo__.py  arnoldi.py  backend.py  backend_ops.py  cg.py  direct.py  minres.py  minres_qlp.py  minsr.py  pseudoinverse.py  stochastic_rcnfg.py
algebra/tests/: test_algebra.py  test_arnoldi_sanity.py  test_pfaffian_jax_ops.py  test_solver_convergence.py  test_solver_edge_cases.py  test_solver_properties.py  test_solver_sigma.py  test_solvers_new.py  test_solvers_sanity.py
algebra/utilities/: README.md  __init__.py  hafnian.py  hafnian_jax.py  pfaffian.py  pfaffian_jax.py  udt.py
algebra/utils/: __init__.py  pfaffian.py  pfaffian_jax.py
benchmarks/: benchmark_algebra.py  benchmark_lattices.py  benchmark_physics.py  benchmark_susceptibility.py  benchmark_susceptibility_sparse.py  run.py  utils.py
common/: README.md  __binary__.py  __datat__.py  __directories__.py  __flog__.py  __folders__.py  __hdf5_read__.py  __init__.py  __parsers__.py  __plot__.py  __time__.py  binary.py  binary_jax.py  datah.py  directories.py  display.py  flog.py  hdf5_lib.py  hdf5man.py  lazy.py  lazy_entry.py  memory.py  ode.py  parsers.py  plot.py  testing.py  tests.py  timer.py
common/embedded/: binary_jax.py  binary_search.py  bit_extract.py
common/plotters/: __init__.py  config.py  data_loader.py  ed.py  help.py  kspace_utils.py  plot_helpers.py  spectral_utils.py
docs/: BENCHMARKS.md  BUILD_AND_CI.md  DOCS_AUDIT.md  FUTURE_BRANCHES.md  MAKEFILE  Makefile  TESTS_CURRENT.md  TESTS_NEW.md  api.rst  api_simple.rst  conf.py  contributing.rst  design_principles.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  license.rst  requirements.txt  usage.rst
general_python/: __init__.py
general_python/algebra/: backend_linalg.py  solver.py  utils.py
general_python/common/: binary.py  memory.py  parsers.py  plot.py
general_python/lattices/: __init__.py  lattice.py  square.py  triangular.py
general_python/maths/: __init__.py  math_utils.py
general_python/ml/: __init__.py  networks.py  training_phases.py
general_python/physics/: __init__.py  density_matrix.py  eigenlevels.py  entanglement_module.py  entropy_jax.py  thermal.py
lattices/: __hexagonal__.py  __hexagonal_lattice__.py  __honeycomb_lattice__.py  __init__.py  __lattice__.py  __square_lattice__.py  graph.py  hexagonal.py  honeycomb.py  lattice.py  square.py  triangular.py
lattices/examples/: demo_lattice_plots.py  lattice_plots.py
lattices/tests/: test_lattice_boundaries.py  test_lattice_dimensions.py  test_lattice_invariants.py  test_lattice_new.py
math/: __math__.py  __statistics__.py
maths/: __init__.py  __math__.py  __random__.py  __statistics__.py  math_utils.py  random.py  statistics.py
ml/: __general__.py  __init__.py  __loss__.py  net_simple.py  networks.py  schedulers.py  training_phases.py
physics/: COMPLETE_RESPONSE_GUIDE.md  PHYSICS_EXAMPLES.md  PHYSICS_MATH.md  PHYSICS_MODULE.md  README.md  __eigenlevels__.py  __entropy__.py  __init__.py  __operators__.py  backend.py  density_matrix.py  density_matrix_jax.py  eigenlevels.py  entanglement_module.py  entropy.py  entropy_jax.py  operators.py  statistical.py  thermal.py
run_scripts/: __init__.py  prepareini.py  runini.py  runjobs.py  slurm.py
tests/: __init__.py  test_activations.py  test_imports.py  test_lattice_coordinates.py  test_lattice_translation.py  test_lazy_imports.py  tests.ipynb
(+154 files in other folders)
