[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "general-python-utils"
version = "0.1.0"
description = "A comprehensive Python library for mathematical computations, machine learning, and physics simulations"
authors = [
    {name = "Maksymilian Kliczkowski", email = "makskliczkowski@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
ml = [
    "tensorflow",
    "scikit-learn",
    "pandas",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/yourusername/general_python"
Documentation = "https://general-python.readthedocs.io/"
Repository = "https://github.com/yourusername/general_python.git"
Issues = "https://github.com/yourusername/general_python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["docs*", "tests*", "*.tests", "*.tests.*"]

[tool.setuptools.package-dir]
"" = "."